v0.7.0
Chance to not consume ammo always stacks multiplicatively now
Adjusted minimum tier values to never approach zero even at their lowest
Fragments can now stack to 99999
Low HP threshold increased to 50% from 20%

v0.6.4
Molten Shell now does 6 times less damage based on enemy life(was instakilling bosses in certain situations), flat damage is unchanged.
Modifier fragment drops now scale with the killed enemy's coin value.
Fixed bosses not dropping modifier fragments.
Modifier fragments are now 50 times cheaper to buy.

v0.6.3
Burning Air is now capped at 1% of max life versus players.
Added sound effects for some modifiers.
Reduced particle effects for burning/shocked/chilled air.


v0.6.2
Fixed Eternia Crystal getting hit by some modifiers.

v0.6.1
Added visuals for ailment buffs.
Fixed Old One's Army's Portal getting destroyed by some modifiers.

v0.6.0
Updated to TML 11.7.4.
Added 53 new modifiers.
Removed all placeholder suffixes.
Removed lifesteal and manasteal affixes.
Removed tier display from item tooltip.
Added sprites for forge and fragments.
Added support for sub-1% values in tooltips.
Reduced max number of suffixes on weapons.
Nerfed ammo consumption affixes.
Fixed and introduced many bugs.
Updating from a previous version will wipe all affixes and items inside modifier forges.


v0.5.1
Fixed minion damage multipliers not applying.
Removed affix counts from the item name.

v0.5.0
Fragments are now sold by the Wizard instead of crafted. The price is unchanged.
Added weapon Fire Nova on hit suffix.
Added weapon Force Wave on melee hit suffix.
Added weapon Frost Spikes on kill suffix.
Both lifesteal prefixes reduced to 0-2%

v0.4.1
Internal bugfix update for example mod extension.

v0.4.0
Certain forge actions are now gated behind boss kills.
Added a close button to the forge UI.
Forge UI can now be moved by dragging anywhere except the buttons.
Added a melee weapon suffix that has a chance to fire fireballs on hit.

v0.3.2