@@ -1,8 +1,10 @@
 v0.7.0
+Overhauled modifier forge
 Chance to not consume ammo always stacks multiplicatively now
 Adjusted minimum tier values to never approach zero even at their lowest
 Fragments can now stack to 99999
 Low HP threshold increased to 50% from 20%
+Added 4 affixes
 
 v0.6.4
 Molten Shell now does 6 times less damage based on enemy life(was instakilling bosses in certain situations), flat damage is unchanged.
@@ -14,7 +16,6 @@ v0.6.3
 Burning Air is now capped at 1% of max life versus players.
 Added sound effects for some modifiers.
 Reduced particle effects for burning/shocked/chilled air.
-
 
 v0.6.2
 Fixed Eternia Crystal getting hit by some modifiers.
